navbar header class issue fixed

--- a/classic_navbar/index.html
+++ b/classic_navbar/index.html
@@ -14,7 +14,7 @@
     <title>Navbar</title>
   </head>
   <body>
-    <header>
+    <header class="primary-header">
       <div class="container header-container">
         <div class="nav-wrapper">
           <a class="brand-logo" href="#">BRAND NAME</a>
